fix: range column gap between label and input

--- a/src/scss/components/atoms/_range.scss
+++ b/src/scss/components/atoms/_range.scss
@@ -3,7 +3,7 @@
 .range {
 	display: flex;
 	flex-direction: column;
-	gap: 5px;
+	gap: 19px;
 
 	// .range__label
 	&__label {
